refactor customer dashboard to categorized view